--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "http://cugbjing.github.io/reactjs-gpt3",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
